Make ant target for beta builds